fix: z-index for floating buttons

--- a/theme/styles/var.css
+++ b/theme/styles/var.css
@@ -34,7 +34,7 @@
 
 /** z-index */
 :root {
-  --b-floating-buttons-z-index: 4;
+  --b-floating-buttons-z-index: 15;
   --b-toc-bar-z-index: 20;
   --b-nav-z-index: 30;
   --b-mask-z-index: 40;
